[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "demo-performance"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
filprofiler = "*"
pyinstrument = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
